[gd_scene load_steps=2 format=3 uid="uid://dsu3klfvyvrd3"]

[ext_resource type="Script" uid="uid://ct4ro8qc1keny" path="res://scripts/Multiplayer.gd" id="1_yqeox"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 377.0
offset_right = 82.0
offset_bottom = 408.0
text = "HOST"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 376.0
offset_right = 181.0
offset_bottom = 407.0
text = "JOIN
"

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = 375.0
offset_right = 395.0
offset_bottom = 406.0
placeholder_text = "Username"

[node name="Send" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 294.0
offset_right = 79.0
offset_bottom = 325.0
text = "Send"

[node name="Message" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 243.0
offset_right = 389.0
offset_bottom = 282.0
placeholder_text = "Message"

[node name="Messages" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 81.0
offset_right = 381.0
offset_bottom = 223.0
editable = false

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
